Converted to W3 CSS and added top-bar

--- a/index.html
+++ b/index.html
@@ -5,11 +5,36 @@
     <title>QO Engineering and Robotics Club</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="w3-top">
+        <div class="w3-row">
+            <div class="w3-quarter w3-container">
+                <img src="QOERC.png">
+            </div>
+            <div class="w3-half w3-container"></div>
+            <div class="w3-quarter w3-container">
+                <p>TODO: Social Icons Here</p>
+            </div>
+        </div>
+
+        <div class="w3-bar w3-black">
+            <a href="#" class="w3-bar-item w3-button w3-mobile">Home</a>
+            <a href="#" class="w3-bar-item w3-button w3-mobile">About Us</a>
+            <a href="#" class="w3-bar-item w3-button w3-mobile">Leadership and Mentors</a>
+            <a href="#" class="w3-bar-item w3-button w3-mobile">FIRST Tech Challenge</a>
+            <a href="#" class="w3-bar-item w3-button w3-mobile">Calendar</a>
+            <a href="#" class="w3-bar-item w3-button w3-mobile">Sponsors</a>
+            <a href="#" class="w3-bar-item w3-button w3-mobile">Contact Us</a>
+            <a href="#" class="w3-bar-item w3-button w3-red w3-mobile w3-right">Wiki</a>
+        </div>
+    </div>
+
+    <br><br><br><br><br><br><br>
+
+    <div class="w3-container">
         <h1>QOHS Engineering and Robotics Club</h1>
         <p>The newly redesigned QOERC Website is coming soon!</p>
     </div>
