Added proper style

--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
         </div>
     </div>
 
-    <div id="About" class="page">
+    <div id="About" class="page" style="display:none">
 
     </div>
 
-    <div id="Leadership" class="page">
+    <div id="Leadership" class="page" style="display:none">
 
     </div>
 
-    <div id="FTC" class="page">
+    <div id="FTC" class="page" style="display:none">
 
     </div>
 
-    <div id="Calendar" class="page">
+    <div id="Calendar" class="page" style="display:none">
 
     </div>
 
-    <div id="Sponsors" class="page">
+    <div id="Sponsors" class="page" style="display:none">
 
     </div>
 
-    <div id="Contact" class="page">
+    <div id="Contact" class="page" style="display:none">
 
     </div>
 
