Added Local CSS

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>QO Engineering and Robotics Club</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="w3.css">
 </head>
 
 <body>
-
     <div class="w3-row">
         <div class="w3-quarter w3-container">
             <img src="QOERC.png">
@@ -83,7 +82,7 @@
                 </p>
             </div>
             <div class="w3-container w3-half">
-                <iframe width="560" height="315"
+                <iframe class="youtube"
                     src="https://www.youtube.com/embed/videoseries?list=PLT-ghe7Z5bRzk25Sk_Vn4oAvfoDAkvWB_&v=oVhzG42vOoY"
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
