Working via LiveShare some edits were made

--- a/index.html
+++ b/index.html
@@ -97,7 +97,87 @@
     </div>
 
     <div id="FTC" class="page" style="display:none">
-
+        <ul>
+            <li>2019-2020 - <a href="https://www.youtube.com/watch?v=XiGB_8Ppnbs">SKYSTONE</a>
+                <ul>
+                    <li>7518: Buena Zajmi, Captain</li>
+                    <li>7519: Hannah McCright, Captain
+                        <ul>
+                            <li>Think Award Winner, Annapolis 1 Qualifier</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        <p>&nbsp;</p>
+        <ul>
+            <li>2018-2019 - <a href="https://www.youtube.com/watch?v=rR4gR4l2XA8">Rover Ruckus</a>
+                <ul>
+                    <li>7518: Philip Johnson, Captain</li>
+                    <li>7519: Samantha Krakovsky, Captain</li>
+                </ul>
+            </li>
+        </ul>
+        <p>&nbsp;</p>
+        <ul>
+            <li>2017-2018 - <a href="https://www.youtube.com/watch?v=nRsu7bRFhx4">Relic Recovery</a>
+                <ul>
+                    <li>7518: Ezra Trost, Captain
+                        <ul>
+                            <li>Think Award Winner, Montgomery 1 Qualifier</li>
+                            <li>Rockwell Collins Innovate Award Winner, Annapolis 1 Qualifier</li>
+                            <li>PTC Design Award Finalist, Annapolis 1 Qualifier</li>
+                            <li>Finalist Alliance 1st Pick, Annapolis 1 Qualifier</li>
+                        </ul>
+                    </li>
+                    <li>7519: Ryan Gniadek, Captain
+                        <ul>
+                            <li>Finalist Alliance 2nd Pick, Montgomery 1 Qualifier</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        <p>&nbsp;</p>
+        <ul>
+            <li>2016-2017 - <a href="https://www.youtube.com/watch?v=wqASwcqdM6o">Velocity Vortex</a>
+                <ul>
+                    <li>7518: Benjamin Bernstein, Captain</li>
+                    <li>7519: Jesse Shakarji, Captain</li>
+                </ul>
+            </li>
+        </ul>
+        <p>&nbsp;</p>
+        <ul>
+            <li>2015-2016 - <a href="https://www.youtube.com/watch?v=b49Q3kqrSv0">FIRST RES-Q</a>
+                <ul>
+                    <li>7518: Jake Skimmons, Captain</li>
+                    <li>7519: Axel Garcia De La Garza, Captain</li>
+                </ul>
+            </li>
+        </ul>
+        <p>&nbsp;</p>
+        <ul>
+            <li>2014-2015 - <a href="https://www.youtube.com/watch?v=ABmBxCwHV94">Cascade Effect</a>
+                <ul>
+                    <li>7518: Jake Skimmons, Captain</li>
+                    <li>7519: Lily Thompson, Captain</li>
+                </ul>
+            </li>
+        </ul>
+        <p>&nbsp;</p>
+        <ul>
+            <li>2013-2014 - <a href="https://www.youtube.com/watch?v=UPAATO-NpcM">Block Party!</a>
+                <ul>
+                    <li>7518: Jake Skimmons, Captain</li>
+                    <li>7519: Lily Thompson, Captain
+                        <ul>
+                            <li>Judges Award, DC Qualifier</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
     </div>
 
     <div id="Calendar" class="page" style="display:none">
@@ -105,7 +185,42 @@
     </div>
 
     <div id="Sponsors" class="page" style="display:none">
-
+        <div class="w3-row">
+            <div class="w3-container">
+                <h1>Sponsors</h1>
+                <p>Thank you to our generous sponsors!</p>
+            </div>
+        </div>
+        <div class="w3-row">
+            <div class="w3-container w3-center w3-half">
+                <img src="Lockheed.jpg">
+            </div>
+            <div class="w3-container w3-center w3-rest">
+                <img src="Auxilium.jpg">
+            </div>
+        </div>
+        <div class="w3-row">
+            <div class="w3-container w3-center w3-third">
+                <img src="OldLineDigital.jpg">
+            </div>
+            <div class="w3-container w3-center w3-third">
+                <img src="Actobotics.jpg">
+            </div>
+            <div class="w3-container w3-center w3-rest">
+                <img src="Lowes.jpg">
+            </div>
+        </div>
+        <div class="w3-row">
+            <div class="w3-container w3-center w3-third">
+                <img src="BoosterClub.png">
+            </div>
+            <div class="w3-container w3-center w3-third">
+                <img src="DwightPatel.png">
+            </div>
+            <div class="w3-container w3-center w3-rest">
+                <img src="GiftHut.jpg">
+            </div>
+        </div>
     </div>
 
     <div id="Contact" class="page" style="display:none">
