--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </p>
             </div>
             <div class="w3-container w3-half">
-                <iframe class="youtube"
+                <iframe
                     src="https://www.youtube.com/embed/videoseries?list=PLT-ghe7Z5bRzk25Sk_Vn4oAvfoDAkvWB_&v=oVhzG42vOoY"
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
@@ -97,91 +97,116 @@
     </div>
 
     <div id="FTC" class="page" style="display:none">
-        <ul>
-            <li>2019-2020 - <a href="https://www.youtube.com/watch?v=XiGB_8Ppnbs">SKYSTONE</a>
+        <div class="w3-row">
+            <div class="w3-container">
+                <h1>FIRST Tech Challenge</h1>
+                <p>We are FIRST Tech Challenge Team 7518 CouGears and Team 7519 CougarBotics from Quince Orchard High
+                    School in Gaithersburg, MD. Our two teams have been competing in FTC since the 2013-2014 season.
+                    This page is a work in progress, but will eventually have more documentation of our journey through
+                    the years.</p>
+            </div>
+        </div>
+        <div class="w3-row">
+            <div class="w3-container">
                 <ul>
-                    <li>7518: Buena Zajmi, Captain</li>
-                    <li>7519: Hannah McCright, Captain
+                    <li>2019-2020 - <a href="https://www.youtube.com/watch?v=XiGB_8Ppnbs">SKYSTONE</a>
                         <ul>
-                            <li>Think Award Winner, Annapolis 1 Qualifier</li>
+                            <li>7518: Buena Zajmi, Captain</li>
+                            <li>7519: Hannah McCright, Captain
+                                <ul>
+                                    <li>Think Award Winner, Annapolis 1 Qualifier</li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                 </ul>
-            </li>
-        </ul>
-        <p>&nbsp;</p>
-        <ul>
-            <li>2018-2019 - <a href="https://www.youtube.com/watch?v=rR4gR4l2XA8">Rover Ruckus</a>
+                <p>&nbsp;</p>
                 <ul>
-                    <li>7518: Philip Johnson, Captain</li>
-                    <li>7519: Samantha Krakovsky, Captain</li>
-                </ul>
-            </li>
-        </ul>
-        <p>&nbsp;</p>
-        <ul>
-            <li>2017-2018 - <a href="https://www.youtube.com/watch?v=nRsu7bRFhx4">Relic Recovery</a>
-                <ul>
-                    <li>7518: Ezra Trost, Captain
+                    <li>2018-2019 - <a href="https://www.youtube.com/watch?v=rR4gR4l2XA8">Rover Ruckus</a>
                         <ul>
-                            <li>Think Award Winner, Montgomery 1 Qualifier</li>
-                            <li>Rockwell Collins Innovate Award Winner, Annapolis 1 Qualifier</li>
-                            <li>PTC Design Award Finalist, Annapolis 1 Qualifier</li>
-                            <li>Finalist Alliance 1st Pick, Annapolis 1 Qualifier</li>
-                        </ul>
-                    </li>
-                    <li>7519: Ryan Gniadek, Captain
-                        <ul>
-                            <li>Finalist Alliance 2nd Pick, Montgomery 1 Qualifier</li>
+                            <li>7518: Philip Johnson, Captain</li>
+                            <li>7519: Samantha Krakovsky, Captain</li>
                         </ul>
                     </li>
                 </ul>
-            </li>
-        </ul>
-        <p>&nbsp;</p>
-        <ul>
-            <li>2016-2017 - <a href="https://www.youtube.com/watch?v=wqASwcqdM6o">Velocity Vortex</a>
+                <p>&nbsp;</p>
                 <ul>
-                    <li>7518: Benjamin Bernstein, Captain</li>
-                    <li>7519: Jesse Shakarji, Captain</li>
-                </ul>
-            </li>
-        </ul>
-        <p>&nbsp;</p>
-        <ul>
-            <li>2015-2016 - <a href="https://www.youtube.com/watch?v=b49Q3kqrSv0">FIRST RES-Q</a>
-                <ul>
-                    <li>7518: Jake Skimmons, Captain</li>
-                    <li>7519: Axel Garcia De La Garza, Captain</li>
-                </ul>
-            </li>
-        </ul>
-        <p>&nbsp;</p>
-        <ul>
-            <li>2014-2015 - <a href="https://www.youtube.com/watch?v=ABmBxCwHV94">Cascade Effect</a>
-                <ul>
-                    <li>7518: Jake Skimmons, Captain</li>
-                    <li>7519: Lily Thompson, Captain</li>
-                </ul>
-            </li>
-        </ul>
-        <p>&nbsp;</p>
-        <ul>
-            <li>2013-2014 - <a href="https://www.youtube.com/watch?v=UPAATO-NpcM">Block Party!</a>
-                <ul>
-                    <li>7518: Jake Skimmons, Captain</li>
-                    <li>7519: Lily Thompson, Captain
+                    <li>2017-2018 - <a href="https://www.youtube.com/watch?v=nRsu7bRFhx4">Relic Recovery</a>
                         <ul>
-                            <li>Judges Award, DC Qualifier</li>
+                            <li>7518: Ezra Trost, Captain
+                                <ul>
+                                    <li>Think Award Winner, Montgomery 1 Qualifier</li>
+                                    <li>Rockwell Collins Innovate Award Winner, Annapolis 1 Qualifier</li>
+                                    <li>PTC Design Award Finalist, Annapolis 1 Qualifier</li>
+                                    <li>Finalist Alliance 1st Pick, Annapolis 1 Qualifier</li>
+                                </ul>
+                            </li>
+                            <li>7519: Ryan Gniadek, Captain
+                                <ul>
+                                    <li>Finalist Alliance 2nd Pick, Montgomery 1 Qualifier</li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                 </ul>
-            </li>
-        </ul>
+                <p>&nbsp;</p>
+                <ul>
+                    <li>2016-2017 - <a href="https://www.youtube.com/watch?v=wqASwcqdM6o">Velocity Vortex</a>
+                        <ul>
+                            <li>7518: Benjamin Bernstein, Captain</li>
+                            <li>7519: Jesse Shakarji, Captain</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>&nbsp;</p>
+                <ul>
+                    <li>2015-2016 - <a href="https://www.youtube.com/watch?v=b49Q3kqrSv0">FIRST RES-Q</a>
+                        <ul>
+                            <li>7518: Jake Skimmons, Captain</li>
+                            <li>7519: Axel Garcia De La Garza, Captain</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>&nbsp;</p>
+                <ul>
+                    <li>2014-2015 - <a href="https://www.youtube.com/watch?v=ABmBxCwHV94">Cascade Effect</a>
+                        <ul>
+                            <li>7518: Jake Skimmons, Captain</li>
+                            <li>7519: Lily Thompson, Captain</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>&nbsp;</p>
+                <ul>
+                    <li>2013-2014 - <a href="https://www.youtube.com/watch?v=UPAATO-NpcM">Block Party!</a>
+                        <ul>
+                            <li>7518: Jake Skimmons, Captain</li>
+                            <li>7519: Lily Thompson, Captain
+                                <ul>
+                                    <li>Judges Award, DC Qualifier</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <div id="Calendar" class="page" style="display:none">
-
+        <div class="w3-row">
+            <div class="w3-container w3-center">
+                <h1>Club Calander</h1>
+            </div>
+        </div>
+        <div class="w3-row">
+            <div class="w3-container w3-center">
+                <iframe
+                    src="https://calendar.google.com/calendar/embed?src=qorobotics%40gmail.com&ctz=America%2FNew_York"
+                    style="border: 0" width="800" height="600" frameborder="0" scrolling="no">
+                </iframe>
+            </div>
+        </div>
     </div>
 
     <div id="Sponsors" class="page" style="display:none">
