--- a/index.html
+++ b/index.html
@@ -93,7 +93,41 @@
     </div>
 
     <div id="Leadership" class="page" style="display:none">
-
+        <div class="w3-row">
+            <div class="w3-container w3-half">
+                <h2>2020-2021 Student Leadership</h2>
+                <h4>Samantha Krakovsky</h4>
+                <h4>&emsp;• President</h4>
+                <h4>Alexander Goslin</h4>
+                <h4>&emsp;• Vice-President</h4>
+                <h4>Noah Watai</h4>
+                <h4>&emsp;• Secretary</h4>
+                <h4>Sean Martin</h4>
+                <h4>&emsp;• Team Leader</h4>
+                <h4>Hannah McCright</h4>
+                <h4>&emsp;• Team Leader</h4>
+            </div>
+            <div class="w3-container w3-rest">
+                <h2>Mentors</h2>
+                <h4>Mr. Omari Sarjeant</h4>
+                <h4>&emsp;• Club Sponsor</h4>
+                <h4>&emsp;• Lead Mentor</h4>
+                <h4>Mr. Kent Reed</h4>
+                <h4>&emsp;• Lead Mentor</h4>
+                <h4>Mr. Derek Sontz</h4>
+                <h4>&emsp;• Mentor</h4>
+                <h4>Ryan Gniadek</h4>
+                <h4>&emsp;• Mentor</h4>
+                <h4>&emsp;• Team Administrator</h4>
+                <h4>Willard Sullivan</h4>
+                <h4>&emsp;• Mentor</h4>
+                <h4>P. Daniel Flynn</h4>
+                <h4>&emsp;• Mentor</h4>
+            </div>
+        </div>
+        <p class="w3-dropdown-hover">Hover over me!
+            <span class="w3-dropdown-content w3-green">Hello World!</span>
+          </p> 
     </div>
 
     <div id="FTC" class="page" style="display:none">
@@ -108,6 +142,15 @@
         </div>
         <div class="w3-row">
             <div class="w3-container">
+                <ul>
+                    <li>2020-2021 - <a href="https://www.youtube.com/user/FIRSTTechChallenge">????</a>
+                        <ul>
+                            <li>751?: Sean Martin, Captain</li>
+                            <li>751?: Hannah McCright, Captain</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>&nbsp;</p>
                 <ul>
                     <li>2019-2020 - <a href="https://www.youtube.com/watch?v=XiGB_8Ppnbs">SKYSTONE</a>
                         <ul>
