--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                 <h4>&emsp;• President</h4>
                 <h4>Alexander Goslin</h4>
                 <h4>&emsp;• Vice-President</h4>
-                <h4>Noah Watai</h4>
-                <h4>&emsp;• Secretary</h4>
                 <h4>Sean Martin</h4>
                 <h4>&emsp;• Team Leader</h4>
                 <h4>Hannah McCright</h4>
                 <h4>&emsp;• Team Leader</h4>
+                <h4>Noah Watai</h4>
+                <h4>&emsp;• Secretary</h4>
             </div>
             <div class="w3-container w3-rest">
                 <h2>Mentors</h2>
@@ -125,9 +125,113 @@
                 <h4>&emsp;• Mentor</h4>
             </div>
         </div>
-        <p class="w3-dropdown-hover">Hover over me!
-            <span class="w3-dropdown-content w3-green">Hello World!</span>
-          </p> 
+        <div id="2019-2020" class="year">
+            <h2>2019-2020 Student Leadership</h2>
+            <h4>Samantha Krakovsky</h4>
+            <h4>&emsp;• President</h4>
+            <h4>Alexander Goslin</h4>
+            <h4>&emsp;• Vice-President</h4>
+            <h4>Buena Zajmi</h4>
+            <h4>&emsp;• CouGears Team Leader</h4>
+            <h4>Hannah McCright</h4>
+            <h4>&emsp;• CougarBotics Team Leader</h4>
+            <h4>Noah Watai</h4>
+            <h4>&emsp;• Secretary</h4>
+            <h4>Maxwell Rosenthal</h4>
+            <h4>&emsp;• 3D Printer Manager</h4>
+            <h4>&emsp;• Treasurer</h4>
+        </div>
+        <div id="2018-2019" class="year">
+            <h2>2018-2019 Student Leadership</h2>
+            <h4>Ryan Gniadek</h4>
+            <h4>&emsp;• President</h4>
+            <h4>Willard Sullivan</h4>
+            <h4>&emsp;• Vice-President</h4>
+            <h4>Philip Johnson</h4>
+            <h4>&emsp;• CouGears Team Leader</h4>
+            <h4>Samantha Krakovsky</h4>
+            <h4>&emsp;• CougarBotics Team Leader</h4>
+            <h4>Daniyal Bharmal</h4>
+            <h4>&emsp;• Secretary</h4>
+            <h4>Akram Hossain</h4>
+            <h4>&emsp;• Treasurer</h4>
+            <h4>Maxwell Rosenthal</h4>
+            <h4>&emsp;• 3D Printer Manager</h4>
+        </div>
+        <div id="2017-2018" class="year">
+            <h2>2017-2018 Student Leadership</h2>
+            <h4>Bayan Labay</h4>
+            <h4>&emsp;• President</h4>
+            <h4>P. Daniel Flynn</h4>
+            <h4>&emsp;• Vice-President</h4>
+            <h4>Ezra Trost</h4>
+            <h4>&emsp;• CouGears Team Leader</h4>
+            <h4>Ryan Gniadek</h4>
+            <h4>&emsp;• CougarBotics Team Leader</h4>
+            <h4>&emsp;• Treasurer</h4>
+            <h4>Dannel Balfas</h4>
+            <h4>&emsp;• Secretary</h4>
+            <h4>Willard Sullivan</h4>
+            <h4>&emsp;• 3D Printer Manager</h4>
+        </div>
+        <div id="2016-2017" class="year">
+            <h2>2016-2017 Student Leadership</h2>
+            <h4>Bayan Labay</h4>
+            <h4>&emsp;• President</h4>
+            <h4>P. Daniel Flynn</h4>
+            <h4>&emsp;• Vice-President</h4>
+            <h4>Benjamin Bernstein</h4>
+            <h4>&emsp;• CouGears Team Leader</h4>
+            <h4>Jesse Shakarji</h4>
+            <h4>&emsp;• CougarBotics Team Leader</h4>
+            <h4>&emsp;• 3D Printer Manager</h4>
+            <h4>Anastasia Valouiski</h4>
+            <h4>&emsp;• Secretary</h4>
+            <h4>Ryan Gniadek</h4>
+            <h4>&emsp;• Treasurer</h4>
+        </div>
+        <div id="2015-2016" class="year">
+            <h2>2015-2016 Student Leadership</h2>
+            <h4>Thomas Good</h4>
+            <h4>&emsp;• President</h4>
+            <h4>Jake Skimmons</h4>
+            <h4>&emsp;• CouGears Team Leader</h4>
+            <h4>Axel Garcia De La Garza</h4>
+            <h4>&emsp;• CougarBotics Team Leader</h4>
+            <h4>Jesse Shakarji</h4>
+            <h4>&emsp;• 3D Printer Manager</h4>
+        </div>
+        <div id="2014-2015" class="year">
+            <h2>2014-2015 Student Leadership</h2>
+            <h4>Thomas Good</h4>
+            <h4>&emsp;• President</h4>
+            <h4>Jake Skimmons</h4>
+            <h4>&emsp;• CouGears Team Leader</h4>
+            <h4>Lily Thompson</h4>
+            <h4>&emsp;• CougarBotics Team Leader</h4>
+            <h4>Jesse Shakarji</h4>
+            <h4>&emsp;• 3D Printer Manager</h4>
+        </div>
+        <div id="2013-2014" class="year">
+            <h2>2013-2014 Student Leadership</h2>
+            <h4>Thomas Good</h4>
+            <h4>&emsp;• President</h4>
+            <h4>Jake Skimmons</h4>
+            <h4>&emsp;• CouGears Team Leader</h4>
+            <h4>Lily Thompson</h4>
+            <h4>&emsp;• CougarBotics Team Leader</h4>
+            <h4>Isaac Beam</h4>
+            <h4>&emsp;• 3D Printer Manager</h4>
+        </div>
+        <div class="w3-bar w3-black">
+            <button class="w3-bar-item w3-button" onclick="openYear('2019-2020')">2019-2020</button>
+            <button class="w3-bar-item w3-button" onclick="openYear('2018-2019')">2018-2019</button>
+            <button class="w3-bar-item w3-button" onclick="openYear('2017-2018')">2017-2018</button>
+            <button class="w3-bar-item w3-button" onclick="openYear('2016-2017')">2016-2017</button>
+            <button class="w3-bar-item w3-button" onclick="openYear('2015-2016')">2015-2016</button>
+            <button class="w3-bar-item w3-button" onclick="openYear('2014-2015')">2014-2015</button>
+            <button class="w3-bar-item w3-button" onclick="openYear('2013-2014')">2013-2014</button>
+        </div>
     </div>
 
     <div id="FTC" class="page" style="display:none">
@@ -153,7 +257,7 @@
                 <p>&nbsp;</p>
                 <ul>
                     <li>2019-2020 - <a href="https://www.youtube.com/watch?v=XiGB_8Ppnbs">SKYSTONE</a>
-                        <ul>
+                        0 <ul>
                             <li>7518: Buena Zajmi, Captain</li>
                             <li>7519: Hannah McCright, Captain
                                 <ul>
@@ -292,7 +396,14 @@
     </div>
 
     <div id="Contact" class="page" style="display:none">
-
+        <div class="w3-row">
+            <div class="w3-container">
+                <iframe
+                    src="https://docs.google.com/forms/d/e/1FAIpQLSeto5euA08nFj1M_63jkll8alB1HNYW-bfJ1yccnpvw5fjl4A/viewform?embedded=true"
+                    width="640" height="959" frameborder="0" marginheight="0" marginwidth="0">Loading…
+                </iframe>
+            </div>
+        </div>
     </div>
 
 
@@ -320,6 +431,15 @@
 
         if (getQueryVariable("page") != "") {
             openPage(getQueryVariable("page"));
+        }
+
+        //This is the function that controls the past leadership tabs.
+        function openYear(yearToOpen) {
+            var i;
+            var x = document.getElementsByClassName("year");
+            for (i = 0; i < x.length; i++)
+                x[i].style.display = "none";
+            document.getElementById(yearToOpen).style.display = "block";
         }
     </script>
 </body>
