--- a/index.html
+++ b/index.html
@@ -125,112 +125,118 @@
                 <h4>&emsp;• Mentor</h4>
             </div>
         </div>
-        <div id="2019-2020" class="year">
-            <h2>2019-2020 Student Leadership</h2>
-            <h4>Samantha Krakovsky</h4>
-            <h4>&emsp;• President</h4>
-            <h4>Alexander Goslin</h4>
-            <h4>&emsp;• Vice-President</h4>
-            <h4>Buena Zajmi</h4>
-            <h4>&emsp;• CouGears Team Leader</h4>
-            <h4>Hannah McCright</h4>
-            <h4>&emsp;• CougarBotics Team Leader</h4>
-            <h4>Noah Watai</h4>
-            <h4>&emsp;• Secretary</h4>
-            <h4>Maxwell Rosenthal</h4>
-            <h4>&emsp;• 3D Printer Manager</h4>
-            <h4>&emsp;• Treasurer</h4>
+        <div class="w3-row">
+            <div class="w3-bar w3-black">
+                <div class="w3-container">
+                    <button class="w3-bar-item w3-button" onclick="openYear('2019-2020')">2019-2020</button>
+                    <button class="w3-bar-item w3-button" onclick="openYear('2018-2019')">2018-2019</button>
+                    <button class="w3-bar-item w3-button" onclick="openYear('2017-2018')">2017-2018</button>
+                    <button class="w3-bar-item w3-button" onclick="openYear('2016-2017')">2016-2017</button>
+                    <button class="w3-bar-item w3-button" onclick="openYear('2015-2016')">2015-2016</button>
+                    <button class="w3-bar-item w3-button" onclick="openYear('2014-2015')">2014-2015</button>
+                    <button class="w3-bar-item w3-button" onclick="openYear('2013-2014')">2013-2014</button>
+                </div>
+            </div>
         </div>
-        <div id="2018-2019" class="year">
-            <h2>2018-2019 Student Leadership</h2>
-            <h4>Ryan Gniadek</h4>
-            <h4>&emsp;• President</h4>
-            <h4>Willard Sullivan</h4>
-            <h4>&emsp;• Vice-President</h4>
-            <h4>Philip Johnson</h4>
-            <h4>&emsp;• CouGears Team Leader</h4>
-            <h4>Samantha Krakovsky</h4>
-            <h4>&emsp;• CougarBotics Team Leader</h4>
-            <h4>Daniyal Bharmal</h4>
-            <h4>&emsp;• Secretary</h4>
-            <h4>Akram Hossain</h4>
-            <h4>&emsp;• Treasurer</h4>
-            <h4>Maxwell Rosenthal</h4>
-            <h4>&emsp;• 3D Printer Manager</h4>
-        </div>
-        <div id="2017-2018" class="year">
-            <h2>2017-2018 Student Leadership</h2>
-            <h4>Bayan Labay</h4>
-            <h4>&emsp;• President</h4>
-            <h4>P. Daniel Flynn</h4>
-            <h4>&emsp;• Vice-President</h4>
-            <h4>Ezra Trost</h4>
-            <h4>&emsp;• CouGears Team Leader</h4>
-            <h4>Ryan Gniadek</h4>
-            <h4>&emsp;• CougarBotics Team Leader</h4>
-            <h4>&emsp;• Treasurer</h4>
-            <h4>Dannel Balfas</h4>
-            <h4>&emsp;• Secretary</h4>
-            <h4>Willard Sullivan</h4>
-            <h4>&emsp;• 3D Printer Manager</h4>
-        </div>
-        <div id="2016-2017" class="year">
-            <h2>2016-2017 Student Leadership</h2>
-            <h4>Bayan Labay</h4>
-            <h4>&emsp;• President</h4>
-            <h4>P. Daniel Flynn</h4>
-            <h4>&emsp;• Vice-President</h4>
-            <h4>Benjamin Bernstein</h4>
-            <h4>&emsp;• CouGears Team Leader</h4>
-            <h4>Jesse Shakarji</h4>
-            <h4>&emsp;• CougarBotics Team Leader</h4>
-            <h4>&emsp;• 3D Printer Manager</h4>
-            <h4>Anastasia Valouiski</h4>
-            <h4>&emsp;• Secretary</h4>
-            <h4>Ryan Gniadek</h4>
-            <h4>&emsp;• Treasurer</h4>
-        </div>
-        <div id="2015-2016" class="year">
-            <h2>2015-2016 Student Leadership</h2>
-            <h4>Thomas Good</h4>
-            <h4>&emsp;• President</h4>
-            <h4>Jake Skimmons</h4>
-            <h4>&emsp;• CouGears Team Leader</h4>
-            <h4>Axel Garcia De La Garza</h4>
-            <h4>&emsp;• CougarBotics Team Leader</h4>
-            <h4>Jesse Shakarji</h4>
-            <h4>&emsp;• 3D Printer Manager</h4>
-        </div>
-        <div id="2014-2015" class="year">
-            <h2>2014-2015 Student Leadership</h2>
-            <h4>Thomas Good</h4>
-            <h4>&emsp;• President</h4>
-            <h4>Jake Skimmons</h4>
-            <h4>&emsp;• CouGears Team Leader</h4>
-            <h4>Lily Thompson</h4>
-            <h4>&emsp;• CougarBotics Team Leader</h4>
-            <h4>Jesse Shakarji</h4>
-            <h4>&emsp;• 3D Printer Manager</h4>
-        </div>
-        <div id="2013-2014" class="year">
-            <h2>2013-2014 Student Leadership</h2>
-            <h4>Thomas Good</h4>
-            <h4>&emsp;• President</h4>
-            <h4>Jake Skimmons</h4>
-            <h4>&emsp;• CouGears Team Leader</h4>
-            <h4>Lily Thompson</h4>
-            <h4>&emsp;• CougarBotics Team Leader</h4>
-            <h4>Isaac Beam</h4>
-            <h4>&emsp;• 3D Printer Manager</h4>
-        </div>
-        <div class="w3-bar w3-black">
-            <button class="w3-bar-item w3-button" onclick="openYear('2019-2020')">2019-2020</button>
-            <button class="w3-bar-item w3-button" onclick="openYear('2018-2019')">2018-2019</button>
-            <button class="w3-bar-item w3-button" onclick="openYear('2017-2018')">2017-2018</button>
-            <button class="w3-bar-item w3-button" onclick="openYear('2016-2017')">2016-2017</button>
-            <button class="w3-bar-item w3-button" onclick="openYear('2015-2016')">2015-2016</button>
-            <button class="w3-bar-item w3-button" onclick="openYear('2014-2015')">2014-2015</button>
-            <button class="w3-bar-item w3-button" onclick="openYear('2013-2014')">2013-2014</button>
+        <div class="w3-row">
+            <div id="2019-2020" class="year w3-container" style="display:none">
+                <h2>2019-2020 Student Leadership</h2>
+                <h4>Samantha Krakovsky</h4>
+                <h4>&emsp;• President</h4>
+                <h4>Alexander Goslin</h4>
+                <h4>&emsp;• Vice-President</h4>
+                <h4>Buena Zajmi</h4>
+                <h4>&emsp;• CouGears Team Leader</h4>
+                <h4>Hannah McCright</h4>
+                <h4>&emsp;• CougarBotics Team Leader</h4>
+                <h4>Noah Watai</h4>
+                <h4>&emsp;• Secretary</h4>
+                <h4>Maxwell Rosenthal</h4>
+                <h4>&emsp;• 3D Printer Manager</h4>
+                <h4>&emsp;• Treasurer</h4>
+            </div>
+            <div id="2018-2019" class="year w3-container" style="display:none">
+                <h2>2018-2019 Student Leadership</h2>
+                <h4>Ryan Gniadek</h4>
+                <h4>&emsp;• President</h4>
+                <h4>Willard Sullivan</h4>
+                <h4>&emsp;• Vice-President</h4>
+                <h4>Philip Johnson</h4>
+                <h4>&emsp;• CouGears Team Leader</h4>
+                <h4>Samantha Krakovsky</h4>
+                <h4>&emsp;• CougarBotics Team Leader</h4>
+                <h4>Daniyal Bharmal</h4>
+                <h4>&emsp;• Secretary</h4>
+                <h4>Akram Hossain</h4>
+                <h4>&emsp;• Treasurer</h4>
+                <h4>Maxwell Rosenthal</h4>
+                <h4>&emsp;• 3D Printer Manager</h4>
+            </div>
+            <div id="2017-2018" class="year w3-container" style="display:none">
+                <h2>2017-2018 Student Leadership</h2>
+                <h4>Bayan Labay</h4>
+                <h4>&emsp;• President</h4>
+                <h4>P. Daniel Flynn</h4>
+                <h4>&emsp;• Vice-President</h4>
+                <h4>Ezra Trost</h4>
+                <h4>&emsp;• CouGears Team Leader</h4>
+                <h4>Ryan Gniadek</h4>
+                <h4>&emsp;• CougarBotics Team Leader</h4>
+                <h4>&emsp;• Treasurer</h4>
+                <h4>Dannel Balfas</h4>
+                <h4>&emsp;• Secretary</h4>
+                <h4>Willard Sullivan</h4>
+                <h4>&emsp;• 3D Printer Manager</h4>
+            </div>
+            <div id="2016-2017" class="year w3-container" style="display:none">
+                <h2>2016-2017 Student Leadership</h2>
+                <h4>Bayan Labay</h4>
+                <h4>&emsp;• President</h4>
+                <h4>P. Daniel Flynn</h4>
+                <h4>&emsp;• Vice-President</h4>
+                <h4>Benjamin Bernstein</h4>
+                <h4>&emsp;• CouGears Team Leader</h4>
+                <h4>Jesse Shakarji</h4>
+                <h4>&emsp;• CougarBotics Team Leader</h4>
+                <h4>&emsp;• 3D Printer Manager</h4>
+                <h4>Anastasia Valouiski</h4>
+                <h4>&emsp;• Secretary</h4>
+                <h4>Ryan Gniadek</h4>
+                <h4>&emsp;• Treasurer</h4>
+            </div>
+            <div id="2015-2016" class="year w3-container" style="display:none">
+                <h2>2015-2016 Student Leadership</h2>
+                <h4>Thomas Good</h4>
+                <h4>&emsp;• President</h4>
+                <h4>Jake Skimmons</h4>
+                <h4>&emsp;• CouGears Team Leader</h4>
+                <h4>Axel Garcia De La Garza</h4>
+                <h4>&emsp;• CougarBotics Team Leader</h4>
+                <h4>Jesse Shakarji</h4>
+                <h4>&emsp;• 3D Printer Manager</h4>
+            </div>
+            <div id="2014-2015" class="year w3-container" style="display:none">
+                <h2>2014-2015 Student Leadership</h2>
+                <h4>Thomas Good</h4>
+                <h4>&emsp;• President</h4>
+                <h4>Jake Skimmons</h4>
+                <h4>&emsp;• CouGears Team Leader</h4>
+                <h4>Lily Thompson</h4>
+                <h4>&emsp;• CougarBotics Team Leader</h4>
+                <h4>Jesse Shakarji</h4>
+                <h4>&emsp;• 3D Printer Manager</h4>
+            </div>
+            <div id="2013-2014" class="year w3-container" style="display:none">
+                <h2>2013-2014 Student Leadership</h2>
+                <h4>Thomas Good</h4>
+                <h4>&emsp;• President</h4>
+                <h4>Jake Skimmons</h4>
+                <h4>&emsp;• CouGears Team Leader</h4>
+                <h4>Lily Thompson</h4>
+                <h4>&emsp;• CougarBotics Team Leader</h4>
+                <h4>Isaac Beam</h4>
+                <h4>&emsp;• 3D Printer Manager</h4>
+            </div>
         </div>
     </div>
 
