--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
             </div>
         </div>
         <div class="w3-row">
+            <div class="w3-container w3-center">
+                <h2>Past Student Leadership</h2>
+            </div>
+        </div>
+        <div class="w3-row w3-center">
             <div class="w3-bar w3-black">
                 <div class="w3-container">
                     <button class="w3-bar-item w3-button" onclick="openYear('2019-2020')">2019-2020</button>
@@ -138,7 +143,7 @@
                 </div>
             </div>
         </div>
-        <div class="w3-row">
+        <div class="w3-row w3-center">
             <div id="2019-2020" class="year w3-container" style="display:none">
                 <h2>2019-2020 Student Leadership</h2>
                 <h4>Samantha Krakovsky</h4>
