--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="w3-row">
         <div class="w3-quarter w3-container">
-            <img src="QOERC.png">
+            <img src="Images/QOERC.png">
         </div>
         <div class="w3-half w3-container"></div>
         <div class="w3-quarter w3-container">
@@ -376,32 +376,32 @@
         </div>
         <div class="w3-row">
             <div class="w3-container w3-center w3-half">
-                <img src="Lockheed.jpg">
+                <img src="Images/Lockheed.jpg">
             </div>
             <div class="w3-container w3-center w3-rest">
-                <img src="Auxilium.jpg">
+                <img src="Images/Auxilium.jpg">
             </div>
         </div>
         <div class="w3-row">
             <div class="w3-container w3-center w3-third">
-                <img src="OldLineDigital.jpg">
+                <img src="Images/OldLineDigital.jpg">
             </div>
             <div class="w3-container w3-center w3-third">
-                <img src="Actobotics.jpg">
+                <img src="Images/Actobotics.jpg">
             </div>
             <div class="w3-container w3-center w3-rest">
-                <img src="Lowes.jpg">
+                <img src="Images/Lowes.jpg">
             </div>
         </div>
         <div class="w3-row">
             <div class="w3-container w3-center w3-third">
-                <img src="BoosterClub.png">
+                <img src="Images/BoosterClub.png">
             </div>
             <div class="w3-container w3-center w3-third">
-                <img src="DwightPatel.png">
+                <img src="Images/DwightPatel.png">
             </div>
             <div class="w3-container w3-center w3-rest">
-                <img src="GiftHut.jpg">
+                <img src="Images/GiftHut.jpg">
             </div>
         </div>
     </div>
