Contact Form Updated
Form centered, header added

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 <img src="Images/OldLineDigital.jpg">
             </div>
             <div class="w3-container w3-center w3-third">
-                <img src="Images/Actobotics.jpg">
+                <img src="Images/Actobotics.jpg" style="max-width: 75%; max-height: auto;">
             </div>
             <div class="w3-container w3-center w3-rest">
                 <img src="Images/Lowes.jpg">
@@ -408,10 +408,15 @@
 
     <div id="Contact" class="page" style="display:none">
         <div class="w3-row">
-            <div class="w3-container">
+            <div class="w3-container w3-center">
+                <h1>Contact Us!</h1>
+            </div>
+        </div>
+        <div class="w3-row">
+            <div class="w3-container w3-center">
                 <iframe
                     src="https://docs.google.com/forms/d/e/1FAIpQLSeto5euA08nFj1M_63jkll8alB1HNYW-bfJ1yccnpvw5fjl4A/viewform?embedded=true"
-                    width="640" height="959" frameborder="0" marginheight="0" marginwidth="0">Loading…
+                    width="640" height="1020" frameborder="0" marginheight="0" marginwidth="0">Loading…
                 </iframe>
             </div>
         </div>
